--- a/index.html
+++ b/index.html
@@ -1,46 +1,240 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Home</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"/>
+
+  <style>
+    .head{
+      font-family: 'Chewy', cursive;
+    }
+  </style>
 </head>
 <body>
+<div class="container-fluid">
+
+
+<section>
+
+  <header>
+
+    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">
-      <img width="40" height="40" class="img-fluid d-inline-block align-text-center" src="images/Logo.avif" alt="Logo">
-      Ice Cream Cafe</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="about.html">About Us</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact Us</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Gallery
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="grid_example1.html">Grid 1st Eg</a></li>
-            <li><a class="dropdown-item" href="grid_example2.html">Grid 1st Eg</a></li>
-          </ul>
-        </li>
-      </ul>
+    <div class="container-fluid">
+      <a class="head navbar-brand" href="#">
+        <img width="40" height="40" class="img-fluid d-inline-block align-text-center" src="images/Logo.avif" alt="Logo">
+        Ice Cream Cafe
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+        data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
+        aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link active" href="index2.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="about.html">About Us</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact Us</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
+              Gallery
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="grid_example1.html">Grid 1st Eg</a></li>
+              <li><a class="dropdown-item" href="grid_example2.html">Grid 2nd Eg</a></li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+    </div>
+    </nav>
+
+  </header>
+
+</section>
+
+
+
+<!-- Carousel Slider Section Start -->
+
+<section>
+  <div id="carouselExampleIndicators" class="carousel slide mt-4" data-bs-ride="carousel">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5"></button>
+          </div>
+
+          <div class="carousel-inner">
+
+              <div class="carousel-item active">
+                <img src="IceCreamImages/fantasy-surreal-delicious-street-food (1).jpg" style="object-fit: cover; width: 100%; height: 500px;" alt="Slide 1">
+              </div>
+              <div class="carousel-item">
+                <img src="IceCreamImages/fantasy-surreal-delicious-street-food.jpg" style="object-fit: cover; width: 100%; height: 500px;" alt="Slide 2">
+              </div>
+              <div class="carousel-item">
+                <img src="IceCreamImages/melting-ice-cream-with-berries.jpg" style="object-fit: cover; width: 100%; height: 500px;" alt="Slide 3">
+              </div>
+              <div class="carousel-item">
+                <img src="IceCreamImages/realistic-ice-cream-with-melting-effect.jpg" style="object-fit: cover; width: 100%; height: 500px;" alt="Slide 4">
+              </div>
+              <div class="carousel-item">
+                <img src="IceCreamImages/three-ice-cream-cones-sit-table-with-one-that-says-ice-cream.jpg" style="object-fit: cover; width: 100%; height: 500px;" alt="Slide 5">
+              </div>
+              <div class="carousel-item">
+                <img src="IceCreamImages/view-delicious-fantasy-surreal-street-food.jpg" style="object-fit: cover; width: 100%; height: 500px;" alt="Slide 6">
+              </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+            <span class="carousel-control-next-icon"></span>
+          </button>
+
+  </div>
+</section>
+
+<!-- Carousel Slider Section Start -->
+
+
+
+<!-- Menu Section Start -->
+
+<section class="mt-5">
+
+  <h1 class="text-center mb-5">Menu</h1>
+
+  <div class="row">
+
+    <div class="col-md-3">
+      <div class="card" style="width: 18rem;">
+        <img src="IceCreamImages/delicious-bubble-gum-ice-cream-bowl.jpg" class="card-img-top" alt="1st_IceCreamImage">
+        <div class="card-body">
+          <h5 class="card-title">Bubble Gum Ice Cream</h5>
+          <p class="card-text">Bursting with the nostalgic flavor of classic bubble gum, our Bubble Gum Ice Cream is a colorful treat</p>
+          <a href="#" class="btn bg-danger-subtle">Buy Now</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-3">
+      <div class="card" style="width: 18rem;">
+        <img src="IceCreamImages/melting-ice-cream-with-berries.jpg" class="card-img-top" alt="2nd_IceCreamImage">
+        <div class="card-body">
+          <h5 class="card-title">Ice Cream With Berries</h5>
+          <p class="card-text">Enjoy the perfect balance of rich, creamy ice cream paired with a medley of fresh, juicy berries. </p>
+          <a href="#" class="btn bg-danger-subtle">Buy Now</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-3">
+      <div class="card" style="width: 18rem;">
+        <img src="IceCreamImages/delicious-bubble-gum-ice-cream-bowl.jpg" class="card-img-top" alt="3rd_IceCreamImage">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+          <a href="#" class="btn bg-danger-subtle">Buy Now</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-3">
+      <div class="card" style="width: 18rem;">
+        <img src="IceCreamImages/delicious-bubble-gum-ice-cream-bowl.jpg" class="card-img-top" alt="4th_IceCreamImage">
+        <div class="card-body">
+          <h5 class="card-title">bubble-gum-ice-cream</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+          <a href="#" class="btn bg-danger-subtle">Buy Now</a>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+</section>
+
+<!-- Menu Section End -->
+<br><br>
+
+<section class="mt-5">
+
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="table-responsive">
+          <table class="table table-primary table-stripedd table-striped-columns table-hover table-bordered">
+            
+            <thead class="table-dark">
+              <tr>
+                <th>Roll No.</th>
+                <th>Name</th>
+                <th>10th Marks(%)</th>
+                <th>12th Marks(%)</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th>1</th>
+                <td>Pruthvi More</td>
+                <td>78.80</td>
+                <td>58.00</td>
+              </tr>
+              <tr>
+                <th>2</th>
+                <td>Krushna Ankade</td>
+                <td>80.00</td>
+                <td>60.00</td>
+              </tr>
+              <tr>
+                <th>3</th>
+                <td>Mahesh Nawale</td>
+                <td>70.00</td>
+                <td>64.00</td>
+              </tr>
+              <tr>
+                <th>4</th>
+                <td>Bhavik Modhave</td>
+                <td>40.00</td>
+                <td>50.00</td>
+              </tr>
+              <tr>
+                <th>5</th>
+                <td>Atul Bhole</td>
+                <td>45.00</td>
+                <td>55.00</td>
+              </tr>
+            </tbody>
+
+          </table>
+        </div>
+      </div>
     </div>
   </div>
-</nav>
+
+</section>
 
 
+
+
+</div>
+
+
+
+<!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
