Added small footer

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
   <header>
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary shadow-sm border  border-2 border-warning-subtle">
     <div class="container-fluid">
-      <a class="head navbar-brand" href="#">
+      <a class="head navbar-brand" href="index.html">
         <img width="40" height="40" class="img-fluid d-inline-block align-text-center" src="images/Logo.avif" alt="Logo">
         Ice Cream Cafe
       </a>
@@ -35,16 +35,16 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link active" href="index2.html">Home</a>
+            <a class="nav-link active" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">About Us</a>
+            <a class="nav-link active" href="about.html">About Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact Us</a>
+            <a class="nav-link active" href="contact.html">Contact Us</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
+            <a class="nav-link active dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
               Gallery
             </a>
             <ul class="dropdown-menu">
@@ -66,7 +66,7 @@
 <!-- Carousel Slider Section Start -->
 
 <section>
-  <div id="carouselExampleIndicators" class="carousel slide mt-4" data-bs-ride="carousel">
+  <div id="carouselExampleIndicators" class="carousel slide mt-4 shadow-lg border border-2 border-warning-subtle" data-bs-ride="carousel">
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"></button>
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"></button>
@@ -120,44 +120,46 @@
   <div class="row">
 
     <div class="col-md-3">
-      <div class="card" style="width: 18rem;">
+      <div class="card shadow-lg" style="width: 18rem;">
         <img src="IceCreamImages/delicious-bubble-gum-ice-cream-bowl.jpg" class="card-img-top" alt="1st_IceCreamImage">
         <div class="card-body">
           <h5 class="card-title">Bubble Gum Ice Cream</h5>
           <p class="card-text">Bursting with the nostalgic flavor of classic bubble gum, our Bubble Gum Ice Cream is a colorful treat</p>
+          <br>
           <a href="#" class="btn bg-danger-subtle">Buy Now</a>
         </div>
       </div>
     </div>
 
     <div class="col-md-3">
-      <div class="card" style="width: 18rem;">
+      <div class="card shadow-lg" style="width: 18rem;">
         <img src="IceCreamImages/melting-ice-cream-with-berries.jpg" class="card-img-top" alt="2nd_IceCreamImage">
         <div class="card-body">
           <h5 class="card-title">Ice Cream With Berries</h5>
           <p class="card-text">Enjoy the perfect balance of rich, creamy ice cream paired with a medley of fresh, juicy berries. </p>
+          <br>
           <a href="#" class="btn bg-danger-subtle">Buy Now</a>
         </div>
       </div>
     </div>
 
     <div class="col-md-3">
-      <div class="card" style="width: 18rem;">
-        <img src="IceCreamImages/delicious-bubble-gum-ice-cream-bowl.jpg" class="card-img-top" alt="3rd_IceCreamImage">
+      <div class="card shadow-lg" style="width: 18rem;">
+        <img src="IceCreamImages/chocolate (1).jpg" class="card-img-top" alt="3rd_IceCreamImage">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+          <h5 class="card-title">Chocolate Icecream</h5>
+          <p class="card-text">Taste of our creamy Chocolate Ice Cream, made with premium cocoa and rich dairy for a velvety-smooth texture and deep, chocolatey flavor.</p>
           <a href="#" class="btn bg-danger-subtle">Buy Now</a>
         </div>
       </div>
     </div>
 
     <div class="col-md-3">
-      <div class="card" style="width: 18rem;">
-        <img src="IceCreamImages/delicious-bubble-gum-ice-cream-bowl.jpg" class="card-img-top" alt="4th_IceCreamImage">
+      <div class="card shadow-lg" style="width: 18rem;">
+        <img src="IceCreamImages/vannila.jpg" class="card-img-top" alt="4th_IceCreamImage">
         <div class="card-body">
-          <h5 class="card-title">bubble-gum-ice-cream</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+          <h5 class="card-title">Vanila Icecream</h5>
+          <p class="card-text">Our Vanilla Ice Cream is a timeless favorite, crafted with rich cream and the finest vanilla beans for a smooth and delicate flavor.</p>
           <a href="#" class="btn bg-danger-subtle">Buy Now</a>
         </div>
       </div>
@@ -168,6 +170,9 @@
 </section>
 
 <!-- Menu Section End -->
+
+<!-- Table Start -->
+
 <br><br>
 
 <section class="mt-5">
@@ -177,7 +182,7 @@
       <div class="col-md-12">
         <div class="table-responsive">
           <table class="table table-primary table-stripedd table-striped-columns table-hover table-bordered">
-            
+            <h1 class="text-center mb-5">Student Details</h1>
             <thead class="table-dark">
               <tr>
                 <th>Roll No.</th>
@@ -226,6 +231,32 @@
   </div>
 
 </section>
+
+<!-- Table Start -->
+
+
+    <br>
+    <hr class="mt-2 mb-5">
+
+    <!-- Footer Start -->
+    <section>
+
+        <footer class=" pt-4 pb-3 mt-5 bg-body-tertiary">
+        <div class="container text-center">
+            <h5 class="mb-3">Ice Cream Café</h5>
+            <p>Serving joy in every scoop! Visit us for handcrafted flavors and a cozy café experience.</p>
+            <div class="d-flex justify-content-center gap-3 mt-3">
+            <a href="#" class="text-black text-decoration-none">Home</a>
+            <a href="about.html" class="text-black text-decoration-none">About</a>
+            <a href="contact.html" class="text-black text-decoration-none">Contact</a>
+            </div>
+            <hr class="bg-light mt-4 mb-2">
+            <p class="mb-0">&copy; 2025 Ice Cream Café. All rights reserved.</p>
+        </div>
+        </footer>
+        
+    </section>
+    <!-- Footer End -->
 
 
 
