--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
 <!-- Menu Section Start -->
 
-<section class="mt-5">
+<section class="container mt-5">
 
   <h1 class="text-center mb-5">Menu</h1>
 
