Learned to create modals in bootstrap

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
             <a class="nav-link active" href="index.html">Home</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link active" href="products.html">Products</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link active" href="about.html">About Us</a>
           </li>
           <li class="nav-item">
@@ -107,69 +110,11 @@
   </div>
 </section>
 
-<!-- Carousel Slider Section Start -->
+<!-- Carousel Slider Section End -->
 
 
 
-<!-- Menu Section Start -->
 
-<section class="container mt-5">
-
-  <h1 class="text-center mb-5">Menu</h1>
-
-  <div class="row">
-
-    <div class="col-md-3">
-      <div class="card shadow-lg" style="width: 18rem;">
-        <img src="IceCreamImages/delicious-bubble-gum-ice-cream-bowl.jpg" class="card-img-top" alt="1st_IceCreamImage">
-        <div class="card-body">
-          <h5 class="card-title">Bubble Gum Ice Cream</h5>
-          <p class="card-text">Bursting with the nostalgic flavor of classic bubble gum, our Bubble Gum Ice Cream is a colorful treat</p>
-          <br>
-          <a href="#" class="btn bg-danger-subtle">Buy Now</a>
-        </div>
-      </div>
-    </div>
-
-    <div class="col-md-3">
-      <div class="card shadow-lg" style="width: 18rem;">
-        <img src="IceCreamImages/melting-ice-cream-with-berries.jpg" class="card-img-top" alt="2nd_IceCreamImage">
-        <div class="card-body">
-          <h5 class="card-title">Ice Cream With Berries</h5>
-          <p class="card-text">Enjoy the perfect balance of rich, creamy ice cream paired with a medley of fresh, juicy berries. </p>
-          <br>
-          <a href="#" class="btn bg-danger-subtle">Buy Now</a>
-        </div>
-      </div>
-    </div>
-
-    <div class="col-md-3">
-      <div class="card shadow-lg" style="width: 18rem;">
-        <img src="IceCreamImages/chocolate (1).jpg" class="card-img-top" alt="3rd_IceCreamImage">
-        <div class="card-body">
-          <h5 class="card-title">Chocolate Icecream</h5>
-          <p class="card-text">Taste of our creamy Chocolate Ice Cream, made with premium cocoa and rich dairy for a velvety-smooth texture and deep, chocolatey flavor.</p>
-          <a href="#" class="btn bg-danger-subtle">Buy Now</a>
-        </div>
-      </div>
-    </div>
-
-    <div class="col-md-3">
-      <div class="card shadow-lg" style="width: 18rem;">
-        <img src="IceCreamImages/vannila.jpg" class="card-img-top" alt="4th_IceCreamImage">
-        <div class="card-body">
-          <h5 class="card-title">Vanila Icecream</h5>
-          <p class="card-text">Our Vanilla Ice Cream is a timeless favorite, crafted with rich cream and the finest vanilla beans for a smooth and delicate flavor.</p>
-          <a href="#" class="btn bg-danger-subtle">Buy Now</a>
-        </div>
-      </div>
-    </div>
-
-  </div>
-
-</section>
-
-<!-- Menu Section End -->
 
 <!-- Table Start -->
 
